test/trivial/shannon/readWriteComplex.good
1.2 + 2.3i
1.2 + 2.3i
1.2 + 2.3i
1.2 + 2.3i
1.2 + 2.3i
readWriteComplex.chpl:6: error: bad format in channel.read(ref a:complex(128)) with path "readWriteComplex.stdin" offset 50
